done splash screen and finalise the sign in sign up form

--- a/app/src/main/res/layout/fragment_login__tab_.xml
+++ b/app/src/main/res/layout/fragment_login__tab_.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F9F9F9"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Login_Tab_Fragment">
 
@@ -13,9 +14,11 @@
         android:layout_height="wrap_content"
         app:layout_constraintWidth_percent="0.8"
         app:layout_constraintVertical_bias="0.3"
-        android:paddingStart="10dp"
+        android:padding="10dp"
         app:flow_horizontalBias="0.5"
         android:hint="Your email address"
+        android:elevation="5dp"
+        android:background="@drawable/login_input_background"
         android:ems="10"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,9 +31,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:paddingStart="10dp"
+        android:padding="10dp"
         android:ems="10"
         android:hint="Your password"
+        android:background="@drawable/login_input_background"
+        android:elevation="5dp"
         android:inputType="textPassword"
         app:flow_horizontalBias="0.5"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -46,6 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="Login"
+        android:elevation="5dp"
         android:backgroundTint="@color/primary_color"
         app:layout_constraintEnd_toEndOf="@+id/et_password_signIn"
         app:layout_constraintStart_toStartOf="@+id/et_password_signIn"
