--- a/app/src/main/res/layout/fragment_sign_up__tab_.xml
+++ b/app/src/main/res/layout/fragment_sign_up__tab_.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F9F9F9"
     tools:context=".SignUp_Tab_Fragment">
 
     <EditText
@@ -14,7 +15,9 @@
         android:ems="10"
         android:hint="Your email address"
         android:inputType="textEmailAddress"
-        android:paddingStart="10dp"
+        android:padding="10dp"
+        android:background="@drawable/login_input_background"
+        android:elevation="5dp"
         app:flow_horizontalBias="0.5"
         app:layout_constraintEnd_toEndOf="@+id/et_username_signUp"
         app:layout_constraintStart_toStartOf="@+id/et_username_signUp"
@@ -26,9 +29,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:paddingStart="10dp"
+        android:padding="10dp"
+        android:background="@drawable/login_input_background"
         android:ems="10"
         android:hint="Your password"
+        android:elevation="5dp"
         android:inputType="textPassword"
         app:flow_horizontalBias="0.5"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,8 +49,10 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:paddingStart="10dp"
+        android:padding="10dp"
         android:hint="Your username"
+        android:background="@drawable/login_input_background"
+        android:elevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +82,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:paddingStart="10dp"
+        android:padding="10dp"
+        android:background="@drawable/login_input_background"
+        android:elevation="5dp"
         app:layout_constraintWidth_percent="0.8"
         android:hint="Re-enter your password"
         android:ems="10"
