--- a/app/src/main/res/drawable/tab_background.xml
+++ b/app/src/main/res/drawable/tab_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/white"/>
+    <solid android:color="#F9F9F9"/>
 
     <corners android:topRightRadius="40dp"
         android:topLeftRadius="40dp"/>
